# Event_Smart_Contract

./: README.md
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/controllers/: auth.rs  error.rs
backend/src/models/: auth.rs
frontend/: package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/UI_components/events_components/: date_time.svelte  event_details.svelte  event_tile.svelte
frontend/src/lib/UI_components/major_components/: navbar.svelte
frontend/src/lib/UI_components/ticket/: ticket.svelte
frontend/src/lib/UI_components/user_components/: organizer.svelte
frontend/src/lib/events_components/: event_tile.svelte
frontend/src/lib/interfaces/: event.ts  organizer.ts  ticket.ts  user.ts
frontend/src/lib/major_components/: navbar.svelte
frontend/src/lib/stores/: event.ts  ticket.ts
frontend/src/lib/ticket/: ticket.svelte
frontend/src/lib/user_components/: organizer.svelte
frontend/src/routes/event/: +page.svelte
frontend/src/routes/event/[slug]/: +page.svelte
frontend/src/routes/event/create_event/: +page.svelte
frontend/src/routes/event/events/: +page.svelte
frontend/src/routes/events/: +page.svelte
frontend/src/routes/organizer/: +page.svelte
frontend/src/routes/organizer/[slug]/: +page.svelte
frontend/src/routes/organizers/: +page.svelte
frontend/src/routes/test/: +page.server.js  +page.svelte
frontend/src/routes/ticket/: +page.svelte
frontend/src/routes/user/login/: +page.svelte
node_api/: .env  server.js
smartcontract/: package-lock.json
smartcontract/contracts/: events.sol
(+4 files in other folders)
